# SelfRepair

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  agent-card.json  alembic.ini  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: demo.webm
backend/: __init__.py
backend/app/: main.py
deploy/compose/: docker-compose.dev.yml
deploy/docker/: Dockerfile
deploy/huggingface/: Dockerfile  README.md  requirements-web.txt  start.sh
docs/: INSTALL.md  PLAN_REMOVE_PLACEHOLDERS.md  ROADMAP.md  api.md  architecture.md  governance.md  integration.md  repo-standards.md  runbook.md  safety.md  status-model.md
docs/adr/: 0001-deterministic-first.md  0002-three-service-topology.md  0003-postgres-state-store.md  0004-plugin-sdk.md
docs/architecture/: system-design.md
docs/design/: v1-rpc-contract.md
examples/: .selfrepair.yml  hello_agent.py  repair_demo.py
examples/broken-python-fastapi/: README.md  app.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_ci_guardian.py  0003_external_issues.py  0004_console_ops.py  0005_auth.py
plugins/scanners/: README.md
scripts/: backfill_history.py  bootstrap_admin.py  publish_site.py  run_daily.py  seed_repo_inventory.py  smoke_test_status_site.py
selfrepair/: __init__.py  __main__.py  cli.py  constants.py  log_config.py  main.py  models.py  settings.py
selfrepair/analyzers/: ci_analyzer.py  dependency_analyzer.py  health_analyzer.py  makefile_analyzer.py  pyproject_analyzer.py  repo_analyzer.py  space_analyzer.py  start_analyzer.py  test_analyzer.py
selfrepair/api/: __init__.py  deps.py  events.py  main.py  middleware.py
selfrepair/auth/: __init__.py  cookies.py  github_app.py  middleware.py  passwords.py  sessions.py
selfrepair/ci/: __init__.py  classifier.py  config.py  dispatcher.py  fingerprints.py  policies.py  redaction.py  schemas.py
selfrepair/coders/: __init__.py  gitpilot_client.py
selfrepair/config/: __init__.py  repo_config.py
selfrepair/connectors/: __init__.py  gitpilot.py
selfrepair/execution/: command_builder.py  install_runner.py  start_runner.py  test_runner.py  timeout_policy.py
selfrepair/fixers/: __init__.py  _diff.py  health_test.py  makefile.py  pyproject.py
selfrepair/git/: __init__.py  codeowners.py  gitleaks.py  pr_builder.py  publisher.py  sigstore.py
selfrepair/gitpilot/: client.py  issue_manager.py  patcher.py  planner.py  pr_manager.py  repo_search.py
selfrepair/governance/: approval_rules.py  branch_rules.py  change_risk.py  policy_engine.py
selfrepair/healing/: __init__.py  failure_classifier.py  fix_strategies.py  healing_loop.py  patch_application.py  retry_policy.py  safe_fix_guardrails.py  space_healer.py
selfrepair/inventory/: filters.py  github_discovery.py  gitlab_discovery.py  hf_hardware.py  huggingface_discovery.py  repo_inventory.py
selfrepair/issues/: __init__.py  classifier.py  clients.py  config.py  dispatcher.py  fingerprints.py  github_client.py  gitlab_client.py  huggingface_client.py  policies.py  schemas.py  service.py  sync.py
selfrepair/llm/: ollabridge_client.py
selfrepair/matrixlab/: __init__.py  artifact_capture.py  executor.py  process_monitor.py  sandbox.py  verifier.py
selfrepair/metrics/: __init__.py  dashboard.py
selfrepair/observability/: __init__.py  logging.py  tracing.py
selfrepair/persistence/: __init__.py  auth_models.py  console_models.py  db.py  models.py
selfrepair/planning/: __init__.py  repair_plan.py  risk_classifier.py
selfrepair/policy/: __init__.py  decisions.py  engine.py  glob.py
selfrepair/providers/: __init__.py  base.py
selfrepair/reporting/: history_builder.py  incident_builder.py  infra_status.py  markdown_reports.py  repo_status.py  report_builder.py  status_builder.py
selfrepair/scanners/: __init__.py  discovery.py  plugin.py  runner.py
selfrepair/sdk/: __init__.py  fixer.py  models.py  scanner.py
selfrepair/site/: __init__.py  generator.py
selfrepair/standards/: health_test_rules.py  huggingface_rules.py  makefile_rules.py  pyproject_rules.py  python311_rules.py  start_target_rules.py  uv_rules.py
selfrepair/state/: __init__.py  machine.py
selfrepair/storage/: local_store.py  snapshot_store.py  state_cache.py
selfrepair/utils/: clock.py  hashing.py  paths.py  text.py  yaml_io.py
selfrepair/validation/: __init__.py  matrixlab_client.py
selfrepair/worker/: __init__.py  main.py  pipeline.py  settings.py
status-site/: history.html  index.html  infra.html  repos.html
status-site/assets/: app.css  app.js
status-site/templates/: incident_card.html  repo_card.html  summary_panel.html
templates/: pr_body.md.j2
tests/: conftest.py  test_gitpilot_client.py  test_matrixlab_validation.py  test_repair_plan.py  test_report_builder.py
tests/integration/: test_daily_run.py  test_gitpilot_client.py  test_matrixlab_executor.py  test_publish_site.py  test_selfrepair_simulation.py
tests/unit/: test_api_deps.py  test_api_middleware.py  test_auth_passwords.py  test_auth_sessions.py  test_ci_classifier.py  test_ci_dispatcher.py  test_ci_fingerprints.py  test_ci_orm_smoke.py  test_ci_redaction.py  test_ci_routes.py  test_codeowners.py  test_fixers.py  test_github_app_auth.py  test_gitlab_discovery.py  test_gitleaks.py  test_gitpilot_connector.py  test_healing_loop.py  test_health_rules.py  test_inventory.py  test_issues_classifier.py  test_issues_clients.py  test_issues_dispatcher.py  test_issues_fingerprints.py  test_issues_orm_smoke.py  test_issues_policies.py  test_issues_routes.py  test_issues_service.py  test_makefile_rules.py  test_metrics.py  test_ollabridge_client.py  test_orm_smoke.py  (+15 more)
(+175 files in other folders)
