[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selfrepair-repo"
version = "1.0.0"
description = "Open-source repository health, safe repair, validation, and audit-ready reporting automation."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "SelfRepair Repo Maintainers" }]
keywords = ["repository", "health", "repair", "devops", "automation", "fastapi", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
# Base deps are kept minimal. Heavy ecosystem deps (huggingface_hub, gitlab,
# arq/sqlalchemy/etc.) live in optional extras so users who don't need them
# don't inherit their version-conflict surface area.
dependencies = [
  "PyGithub>=2.3.0",
  "GitPython>=3.1.43",
  "Jinja2>=3.1.4",
  "PyYAML>=6.0.2",
  "httpx>=0.27.0",
  "pydantic[email]>=2.8.2",
  "pydantic-settings>=2.4.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "tenacity>=8.5.0",
  "packaging>=24.1",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]
server = [
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.1.18",
  "arq>=0.26.0",
  "redis>=5.0.0",
  "structlog>=24.1.0",
  "PyJWT[crypto]>=2.8.0",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
]
# HuggingFace discovery support. Pulling huggingface_hub drags in tokenizers
# transitively, which historically conflicts with old transformers installs in
# shared envs (see docs/INSTALL.md). Keep it opt-in.
huggingface = ["huggingface_hub>=0.28.0"]
gitlab = ["python-gitlab>=4.0.0"]
ollabridge = ["httpx>=0.27.0"]
all = ["selfrepair-repo[dev,server,gitlab,ollabridge,huggingface]"]

[project.urls]
Homepage = "https://github.com/ruslanmv/SelfRepair"
Documentation = "https://github.com/ruslanmv/SelfRepair/tree/main/docs"
Issues = "https://github.com/ruslanmv/SelfRepair/issues"

[project.scripts]
selfrepair-repo = "selfrepair.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["selfrepair*", "backend*"]
exclude = ["tests*", "state*", "status-site*", "migrations*", "plugins*", "deploy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["selfrepair", "backend"]
combine-as-imports = true

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses Depends(), Query(), Path(), Header() in default arguments
# as part of its design. These are immutable factories, not mutable
# defaults, so flagging them is a false positive.
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Path",
  "fastapi.Header",
  "fastapi.Cookie",
  "fastapi.Body",
  "fastapi.Form",
  "fastapi.File",
  "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"migrations/**" = ["E402", "F401", "I001"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.uv]
# Hint to uv users: prefer the precompiled wheels for binary deps so we don't
# accidentally trigger source builds in CI.
compile-bytecode = true
